@@ -4,6 +4,8 @@
 	<!-- Default properties, set only if not already assigned in the build.properties file -->
 	<property name="dirs.root" value="../" />
 	<property name="dirs.component" value="../component" />
+	<property name="dirs.modules" value="../modules" />
+	<property name="dirs.plugins" value="../plugins" />
 	<property name="dirs.release" value="../release" />
 	<property name="version" value="git" />
 
@@ -113,6 +115,19 @@
 			<fileset refid="component" />
 		</zipme>
 
+		<!--
+		<zipme basedir="${dirs.modules}" destfile="${dirs.release}/com_docimport-${version}.zip" includeemptydirs="true">
+			<fileset dir="${dirs.modules}">
+				<include name="**" />
+			</fileset>
+		</zipme>
+		-->
+
+		<zipme basedir="${dirs.plugins}" prefix="plugins/" destfile="${dirs.release}/com_docimport-${version}.zip" includeemptydirs="true">
+			<fileset dir="${dirs.plugins}">
+				<include name="**" />
+			</fileset>
+		</zipme>
 	</target>
 	
 	<target name="ftpdeploy" depends="git">
